kubernetes/k8s/api-gateway/api-gateway.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800" # max response timeout = 30 minutes
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m" # max upload body size = 1 gigabyte
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-REQUEST-ID $msec;
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
  - host: video-server.localhost
    http:
      paths:
      - path: /vms(/|$)(.*)
        backend:
          serviceName: video-management
          servicePort: 8080
      - path: /()(.*)
        backend:
          serviceName: storage-manager
          servicePort: 80
